link back to github

--- a/.ci/index.html
+++ b/.ci/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="api.html">API JSON Browser</a></li>
         <li><a href="map.html">Incidents Map</a></li>
+        <li><a href="https://github.com/lazka/katwarn-api">Source</a></li>
     </ul>
 </body>
 </html>
